--- a/docs/bookdown.tex
+++ b/docs/bookdown.tex
@@ -737,7 +737,11 @@ So you should do the following EVERY time you run your script.
 This will clear potentially problematic previous stats, run the script commands, and display the output in the Console. Moving forward we will use this approach for running scripts. Once you have used Source wiht Echo once, you can just click the Source button and it will use Source with Echo automatically (without the need to use the pull down option for selecting Source with Echo).
 
 \begin{rmdcaution}
+\begin{rmdcaution}
+
 Using Restart R before you run a script, or R code in general, is a critical workflow tip.
+
+\end{rmdcaution}
 \end{rmdcaution}
 
 \hypertarget{trying-source-with-echo}{%
@@ -2634,8 +2638,8 @@ These effect size labels should be interpreted with caution. The magnitude of an
 \hypertarget{graphing}{%
 \chapter{Graphing}\label{graphing}}
 
-\hypertarget{required}{%
-\section{Required}\label{required}}
+\hypertarget{required-1}{%
+\section{Required}\label{required-1}}
 
 The data files below are used in this chapter. The files are available at: \url{https://github.com/dstanley4/psyc6060bookdown}
 
@@ -3818,8 +3822,8 @@ The print() command can be used to confirm that the population contains 100,000 
 ## # ... with 99,990 more rows
 \end{verbatim}
 
-\hypertarget{notation}{%
-\section{Notation}\label{notation}}
+\hypertarget{notation-1}{%
+\section{Notation}\label{notation-1}}
 
 In the formulas below, when we refer to the population, we use uppercase letters to indicate members (\(X\)) or the size (\(N\)). The population mean is indicated by the symbol \(\mu\). In contrast, when we refer to the sample, we use lowercase letters to indicate members (\(x\)) or the size (\(n\)). The sample mean is indicated by the symbol \(\bar{x}\). A single bar above a letter indicates a mean. If we calculate the average of several sample means we indicate this with the symbol \(\bar{\bar{x}}\). A double bar above a letter indicates a mean of means. Make sure you notice the similarities between subsequent population and sample formulas even though the notation often differs.
 
@@ -4577,8 +4581,8 @@ Now that you understand the logic for assessing bias, we present an old statisti
 ``A physicist, a chemist, and a statistician go hunting. The physicist shoots at a deer and misses by 2 meters to the left. The chemist shoots and misses by 2 meters to the right. The statistician immediately yells''We got it!"
 \end{quote}
 
-\hypertarget{key-points}{%
-\section{Key Points}\label{key-points}}
+\hypertarget{key-points-1}{%
+\section{Key Points}\label{key-points-1}}
 
 \begin{enumerate}
 \def\labelenumi{\arabic{enumi}.}
@@ -4599,8 +4603,8 @@ Now that you understand the logic for assessing bias, we present an old statisti
 \hypertarget{sampling-precision}{%
 \chapter{Sampling Precision}\label{sampling-precision}}
 
-\hypertarget{overview}{%
-\section{Overview}\label{overview}}
+\hypertarget{overview-2}{%
+\section{Overview}\label{overview-2}}
 
 In the previous chapter we focused on examining the extent to which we could estimate a population parameter from a statistic in an unbiased manner. That is, we focused on the fact that, due to sampling error, a sample estimate (i.e., a statistic) of a population parameter will likely be wrong. Sample statistics may overestimate, or underestimate, a population parameter - often substantially. Consequently, we learned to think about the accuracy of sample statistics. More specifically, we learned to think about accuracy not in terms of a single study, but rather in terms of whether sample statistics correctly estimate the population parameter on average over many studies (as illustrated in Figure \ref{fig:showbias2}). When the average of many sample statistics (e.g., sample means) equals the population parameter (e.g., population mean) there is no bias and the sample statistic can be considered accurate (on average).
 
@@ -5096,8 +5100,8 @@ As with the other statistics reviewed, for sample correlations (\(r\)) you can c
 \hypertarget{effect-sizes-from-publications}{%
 \chapter{Effect sizes from publications}\label{effect-sizes-from-publications}}
 
-\hypertarget{required}{%
-\section{Required}\label{required}}
+\hypertarget{required-2}{%
+\section{Required}\label{required-2}}
 
 The following CRAN packages must be installed:
 
@@ -5111,15 +5115,15 @@ cocor\tabularnewline
 \bottomrule
 \end{longtable}
 
-\hypertarget{objective}{%
-\section{Objective}\label{objective}}
+\hypertarget{objective-1}{%
+\section{Objective}\label{objective-1}}
 
 In this chapter we focus on obtaining effect size estimates (e.g., correlation or standardized mean difference) from published articles. Often studies do not report effect sizes (e.g., \(d\)-values) or if they do, they don't report the confidence interval for that effect. We will learn more about confidence intervals in a future chapter, but for now, think of a confidence interval for a study/sample effect (e.g., \(d\)-value) as providing a plausible range of values for the population parameter (e.g., \(\delta\)). Below we learn the R commands needed to obtain effect sizes with confidence intervals from published articles.
 
 The ability to obtain effect size estimate from articles will be come extraordinarily important later in the course. Specifically, when it is time to engage in sample size planning (e.g., for your thesis) you will need to obtain estimates of the effects you are interested in from past research. The commands in this chapter will help you to do so.
 
-\hypertarget{estimating-delta}{%
-\section{\texorpdfstring{Estimating \(\delta\)}{Estimating \textbackslash delta}}\label{estimating-delta}}
+\hypertarget{estimating-delta-1}{%
+\section{\texorpdfstring{Estimating \(\delta\)}{Estimating \textbackslash delta}}\label{estimating-delta-1}}
 
 \hypertarget{independent-groups}{%
 \subsection{Independent Groups}\label{independent-groups}}
@@ -5547,8 +5551,8 @@ We can use the N and \(t\)-value to calculate the \(d\)-value and CI using the c
 
 In this repeated measures design the population effect (\(\delta\)) is unknown but our sample estimate of weight loss is \(d\) = 0.97, 95\% CI {[}0.60, 1.34{]}. This \(d\)-value will differ from the population effect (\(\delta\)) due to sampling error. The confidence interval indicates that a plausible range for \(\delta\) is 0.60 to 1.34.
 
-\hypertarget{estimating-rho}{%
-\section{\texorpdfstring{Estimating \(\rho\)}{Estimating \textbackslash rho}}\label{estimating-rho}}
+\hypertarget{estimating-rho-1}{%
+\section{\texorpdfstring{Estimating \(\rho\)}{Estimating \textbackslash rho}}\label{estimating-rho-1}}
 
 \hypertarget{a-single-correlation}{%
 \subsection{A single correlation}\label{a-single-correlation}}
@@ -5623,8 +5627,8 @@ From this output you see that in Study 1 \(r\) = .32 and in Study 2 \(r\) = .51.
 \hypertarget{sample-size-analysis-for-nhst}{%
 \chapter{Sample size analysis for NHST}\label{sample-size-analysis-for-nhst}}
 
-\hypertarget{required}{%
-\section{Required}\label{required}}
+\hypertarget{required-3}{%
+\section{Required}\label{required-3}}
 
 The following CRAN packages must be installed:
 
@@ -5638,8 +5642,8 @@ pwr\tabularnewline
 \bottomrule
 \end{longtable}
 
-\hypertarget{overview}{%
-\section{Overview}\label{overview}}
+\hypertarget{overview-3}{%
+\section{Overview}\label{overview-3}}
 
 In this chapter we focus on statistical power -- which is the probability of finding an effect if it exists. For example, if the power for your study is .90 that means you have a 90\% chance of finding an effect if it exists. On the other hand, if your statistical power is below .50 that means you have less than a 50\% chance of finding an effect if it exists. If your power is .50 you might well question whether it is even worth conducting your study - because the odds of finding an effect (if there is one) are so incredibly low. Low statistical power means you have a \emph{\textbf{low} chance of concluding there is an effect} when an effect \textbf{is} present.
 
@@ -5652,19 +5656,19 @@ Interesting, it is possible to calculate the average statistical power for a jou
 \hypertarget{goals}{%
 \section{Goals}\label{goals}}
 
-In the rest of the chapter we focus on obtaining the desired power for our study by conducting a sample size analysis based on Null Hypothesis Significance Testing (NHST) logic. We caveat all of the subsequent advise is based on the goal of obtaining research findings that are trustworthy. Many times, however, research may be conducted a different goal. For example, an Honours Thesis in psychology may be conducted with the primary goal being a learning experience for the student. When this is the case (as it often is in training scenarios) then the sample sizes used for the project may fall substantially short of the sample sizes suggested by power analyses below. This occurs frequently due to the fact that student theses have limited time and financial resources because the focus is on learning the research process rather than producing robust findings.
+In the rest of the chapter we focus on obtaining the desired power for our study by conducting a sample size analysis based on Null Hypothesis Significance Testing (NHST) logic. We caveat all of the subsequent advise is based on the goal of obtaining research findings that are trustworthy. Many times, however, research may be conducted with a different goal. For example, an Honours Thesis in psychology may be conducted with the primary goal being a learning experience for the student. When this is the case (as it often is in training scenarios) then the sample sizes used for the project may fall substantially short of the sample sizes suggested by power analyses below. This occurs frequently due to the fact that student theses have limited time and financial resources because the focus is on learning the research process rather than producing robust findings.
 
 Conducting a sample size analysis requires a few pieces of information before you start.
 
 \begin{enumerate}
 \def\labelenumi{\arabic{enumi}.}
 \item
-  Desired power. Power refers to probability of obtaining a significant result (p \textless{} .05) if the effect/difference exists. Often a power level of .80 or .85 is suggested when planning studies. However, a power-level of .90 is probability more advisable given how easy it is to obtain a \(p\)-value less than .05. Indeed, Dr.~Daniel Lakens \href{http://daniellakens.blogspot.com/2017/05/how-power-analysis-implicitly-reveals.html}{notes} that only individuals with power .90 or higher are eligible funding in his Department at the Eindhoven University of Technology.
+  Desired power. Power refers to probability of obtaining a significant result (p \textless{} .05) if the effect/difference exists. Often a power level of .80 or .85 is suggested when planning studies. However, a power-level of .90 is probability more advisable given how easy it is to obtain a \(p\)-value less than .05. Indeed, Dr.~Daniel Lakens \href{http://daniellakens.blogspot.com/2017/05/how-power-analysis-implicitly-reveals.html}{notes} that only individuals with power .90 or higher are eligible for funding in his Department at the Eindhoven University of Technology.
 \item
   Population-level effect size. To conduct a sample-size analysis you need an estimate of the population effect size you are trying to find. Most commonly, for theses, that means you needs a estimate of the population-level \(d\)-value (i.e., \(\delta\)) or population-level correlation (\(\rho\)) that you are trying to detect.
 \end{enumerate}
 
-Below we present the process for conducing a sample size analysis for the independent groups \(t\)-test, repeated measures \(t\)-test, and the correlations. For each of these analyses we go through three steps:
+Below we present the process for conducing a sample size analysis for the independent groups \(t\)-test, repeated measures \(t\)-test, andcorrelations. For each of these analyses we go through three steps:
 
 \begin{enumerate}
 \def\labelenumi{\arabic{enumi}.}
@@ -5672,15 +5676,19 @@ Below we present the process for conducing a sample size analysis for the indepe
 \item
   Estimating the population effect size
 \item
-  Determining the desired sample size
+  Determining the desired sample size for your study
 \item
-  Determining what sample-level effect sizes will be significant with the derived sample size.
+  Determining what sample-level effect sizes will be significant in your study with the desired sample size.
 \end{enumerate}
 
-As we review these steps for the analyses below we omit using subjective judgment as the basis for estimating the population effect size. Sometimes researchers are tempted to use a subjective judgment as to whether the population effect is small, medium, or large based on Cohen's (1988) benchmarks. Unfortunately, using benchmarks of this sort as the basis for determine the smallest effect size of interest (SESOI) at the population level is problematic because it is subjective. Many researchers might be tempted to take a middle of the road approach and use a medium effect size. Yet at review of meta-analytic effect size (i.e, population estimates) by \citep{hemphill2003interpreting} indicated that 2/3 of population effect sizes in the psychology literature are smaller than a medium effect size. Consequently, taking a middle of the road approach and assuming a medium effect size is likely to result in very low statistical power. Consequently, ``{[}r{]}elying on a benchmark is the weakest possible justification of a SESOI and should be avoided.'' \citep[p.~262,][]{lakens2018equivalence}
+As we review these steps for the analyses below we omit using subjective judgment as the basis for estimating the population effect size. Sometimes researchers are tempted to use a subjective judgment as to whether the population effect is small, medium, or large based on Cohen's (1988) benchmarks. Unfortunately, using benchmarks of this sort as the basis for determine the smallest effect size of interest (SESOI) at the population level is problematic because it is subjective. Many researchers might be tempted to take a middle of the road approach and use a medium effect size. Yet a review of meta-analytic effect sizes (i.e., population estimates) by \citep{hemphill2003interpreting} indicated that 2/3 of the population effect sizes in psychology are lower than a medium effect. Consequently, taking a middle of the road approach and assuming a medium effect size is likely to result in low statistical power. Indeed, ``{[}r{]}elying on a benchmark is the weakest possible justification of a SESOI and should be avoided.'' \citep[p.~262,][]{lakens2018equivalence}
 
 \begin{rmdcaution}
+\begin{rmdcaution}
+
 \textbf{Using a sample size of previous study}. One approach to sample size analysis is simply to use the sample size from a previous study conducted in that research area. This is the worst possible strategy for choosing a sample size. Richard Morey and Daniel Lakens \href{https://www.google.com/url?sa=t\&rct=j\&q=\&esrc=s\&source=web\&cd=\&ved=2ahUKEwj3wvikhsPsAhVxk-AKHe5xCsYQFjAAegQIBRAC\&url=https\%3A\%2F\%2Fraw.githubusercontent.com\%2Fricharddmorey\%2Fpsychology_resolution\%2Fmaster\%2Fpaper\%2Fresponse.pdf\&usg=AOvVaw2-uqEGCGlGvLVlazweKRq2}{discuss} how most study results in psychology are statistically unfalsifiable because the sample sizes (and corresponding power) are so low. Consequently, using a the sample size for your study based on past research is not advised. Doing so will most likely to result in a sample size that is so small any resulting findings will be untrustworthy and unfalsifiable. Conduct a proper sample size analysis.
+
+\end{rmdcaution}
 \end{rmdcaution}
 
 \hypertarget{independent-groups-t-test}{%
@@ -5916,7 +5924,7 @@ This table indicates that assuming a population effect size of \(\delta\) = .24 
 \hypertarget{a-different-effect-size}{%
 \paragraph{A different effect size?}\label{a-different-effect-size}}
 
-We are only use an estimate of the population effect size. What happens to power if the population effect size is different than we estimated. That information if conveyed in the graph below. An examination of this output might cause you to adjust your sample size.
+Sample size calculations use an estimate of the unknown population effect size. What happens to power if the population effect size is different than what we estimated. That information is conveyed in the graph below. An examination of this output might cause you to adjust your sample size.
 
 \begin{Shaded}
 \begin{Highlighting}[]
@@ -6285,7 +6293,7 @@ This table indicates that assuming a population effect size of \(\delta\) = .24 
 \hypertarget{a-different-effect-size-1}{%
 \paragraph{A different effect size?}\label{a-different-effect-size-1}}
 
-We are only use an estimate of the population effect size. What happens to power if the population effect size is different than we estimated. That information if conveyed in the graph below. An examination of this output might cause you to adjust your sample size.
+Sample size calculations use an estimate of the unknown population effect size. What happens to power if the population effect size is different than what we estimated. That information is conveyed in the graph below. An examination of this output might cause you to adjust your sample size.
 
 \begin{Shaded}
 \begin{Highlighting}[]
@@ -6645,7 +6653,7 @@ This table indicates that assuming a population effect size of \(\rho\) = .18 th
 \hypertarget{a-different-effect-size-2}{%
 \paragraph{A different effect size?}\label{a-different-effect-size-2}}
 
-We are only use an estimate of the population effect size. What happens to power if the population effect size is different than we estimated. That information if conveyed in the graph below. An examination of this output might cause you to adjust your sample size.
+Sample size calculations use an estimate of the unknown population effect size. What happens to power if the population effect size is different than what we estimated. That information is conveyed in the graph below. An examination of this output might cause you to adjust your sample size.
 
 \begin{Shaded}
 \begin{Highlighting}[]
