--- a/08-power_effect_size.Rmd
+++ b/08-power_effect_size.Rmd
@@ -124,6 +124,8 @@ To determine a sample size for your independent groups $t$-test you need to:
 
 * specify desired power (probability of a significant effect if it exists)
 
+* specify if you are conducting a one-tailed or two-tailed test
+
 * examine a graph to see how a greater/fewer number of participants influences power
 
 * examine a graph to see how a higher/lower population effect power
@@ -134,6 +136,8 @@ In the example below we use:
 * Effect size estimate from the small telescope approach ($\delta = .24$)
 
 * Desired power of .90 - a 90% chance of finding our effect if it exists
+
+* The fact the we wish to conduct a one-tail test (i.e., in our study we will have a directional alternative hypothesis)
 
 ```{r}
 library(pwr)
@@ -399,6 +403,8 @@ To determine a sample size for your repeated measures $t$-test you need to:
 
 * specify desired power (probability of a significant effect if it exists)
 
+* specify if you are conducting a one-tailed or two-tailed test
+
 * examine a graph to see how a greater/fewer number of participants influences power
 
 * examine a graph to see how a higher/lower population effect power
@@ -409,6 +415,8 @@ In the example below we use:
 * Effect size estimate from the small telescope approach ($\delta = .17$)
 
 * Desired power of .90 - a 90% chance of finding our effect if it exists
+
+* The fact the we wish to conduct a one-tail test (i.e., in our study we will have a directional alternative hypothesis)
 
 ```{r}
 library(pwr)
@@ -675,6 +683,8 @@ To determine a sample size for your correlation study you need to:
 
 * specify desired power (probability of a significant effect if it exists)
 
+* specify if you are conducting a one-tailed or two-tailed test
+
 * examine a graph to see how a greater/fewer number of participants influences power
 
 * examine a graph to see how a higher/lower population effect power
@@ -685,6 +695,8 @@ In the example below we use:
 * Effect size estimate from the small telescope approach ($\rho = .18$)
 
 * Desired power of .90 - a 90% chance of finding our effect if it exists
+
+* The fact the we wish to conduct a one-tail test (i.e., in our study we will have a directional alternative hypothesis)
 
 ```{r}
 library(pwr)
