--- a/docs/bookdown.tex
+++ b/docs/bookdown.tex
@@ -5808,6 +5808,8 @@ To determine a sample size for your independent groups \(t\)-test you need to:
 \item
   specify desired power (probability of a significant effect if it exists)
 \item
+  specify if you are conducting a one-tailed or two-tailed test
+\item
   examine a graph to see how a greater/fewer number of participants influences power
 \item
   examine a graph to see how a higher/lower population effect power
@@ -5820,6 +5822,8 @@ In the example below we use:
   Effect size estimate from the small telescope approach (\(\delta = .24\))
 \item
   Desired power of .90 - a 90\% chance of finding our effect if it exists
+\item
+  The fact the we wish to conduct a one-tail test (i.e., in our study we will have a directional alternative hypothesis)
 \end{itemize}
 
 \begin{Shaded}
@@ -6177,6 +6181,8 @@ To determine a sample size for your repeated measures \(t\)-test you need to:
 \item
   specify desired power (probability of a significant effect if it exists)
 \item
+  specify if you are conducting a one-tailed or two-tailed test
+\item
   examine a graph to see how a greater/fewer number of participants influences power
 \item
   examine a graph to see how a higher/lower population effect power
@@ -6189,6 +6195,8 @@ In the example below we use:
   Effect size estimate from the small telescope approach (\(\delta = .17\))
 \item
   Desired power of .90 - a 90\% chance of finding our effect if it exists
+\item
+  The fact the we wish to conduct a one-tail test (i.e., in our study we will have a directional alternative hypothesis)
 \end{itemize}
 
 \begin{Shaded}
@@ -6540,6 +6548,8 @@ To determine a sample size for your correlation study you need to:
 \item
   specify desired power (probability of a significant effect if it exists)
 \item
+  specify if you are conducting a one-tailed or two-tailed test
+\item
   examine a graph to see how a greater/fewer number of participants influences power
 \item
   examine a graph to see how a higher/lower population effect power
@@ -6552,6 +6562,8 @@ In the example below we use:
   Effect size estimate from the small telescope approach (\(\rho = .18\))
 \item
   Desired power of .90 - a 90\% chance of finding our effect if it exists
+\item
+  The fact the we wish to conduct a one-tail test (i.e., in our study we will have a directional alternative hypothesis)
 \end{itemize}
 
 \begin{Shaded}
