--- a/03-populations.Rmd
+++ b/03-populations.Rmd
@@ -1005,7 +1005,7 @@ knitr::include_graphics("ch_populations/images/rho_example.png")
 
 1. Standardized mean differences are reported with a leading zero: $delta$ = 0.50.
 
-2. Correlations are reported *without* a leading zero: $rho$ = .30.
+2. Correlations are reported *without* a leading zero: $\rho$ = .30.
 
 3. The difference in reporting is an APA-style issue. Values that are bounded between 0 and 1 (or between -1 and +1) are reported without a leading zero. Values that are not bounded (such as $\delta$ values) are reported with the leading zero.
 
