--- a/03-populations.Rmd
+++ b/03-populations.Rmd
@@ -1003,7 +1003,7 @@ knitr::include_graphics("ch_populations/images/rho_example.png")
 
 ## Minor Points
 
-1. Standardized mean differences are reported with a leading zero: $delta$ = 0.50.
+1. Standardized mean differences are reported with a leading zero: $\delta$ = 0.50.
 
 2. Correlations are reported *without* a leading zero: $\rho$ = .30.
 
