--- a/docs/bookdown.tex
+++ b/docs/bookdown.tex
@@ -203,7 +203,7 @@
 
 \title{Welcome!}
 \author{David J. Stanley}
-\date{2020-10-21}
+\date{2020-10-22}
 
 \begin{document}
 \maketitle
@@ -2611,11 +2611,11 @@ These effect size labels should be interpreted with caution. The magnitude of an
 \begin{enumerate}
 \def\labelenumi{\arabic{enumi}.}
 \item
-  Standardized mean differences are reported with a leading zero: \(delta\) = 0.50.
+  Standardized mean differences are reported with a leading zero: \(\delta\) = 0.50.
 \item
-  Correlations are reported \emph{without} a leading zero: \(rho\) = .30.
+  Correlations are reported \emph{without} a leading zero: \(\rho\) = .30.
 \item
-  The difference in reporting is an APA-style issue. Values that are bounded between 0 and 1 (or between -1 and +1) are reported without a leading zero. Values that are not bounded (such as \(\delta\) values) are reported with the leading zero.
+  The difference in reporting is an APA-style issue. Values that are bounded between 0 and 1 (or between -1 and +1) are reported without a leading zero (e.g., \(\rho\) and \(r\)). Values that are not bounded are reported with the leading zero (e.g., \(\delta\) and \(d\)).
 \end{enumerate}
 
 \hypertarget{self-assessment}{%
@@ -5681,7 +5681,7 @@ Below we present the process for conducing a sample size analysis for the indepe
   Determining what sample-level effect sizes will be significant in your study with the desired sample size.
 \end{enumerate}
 
-As we review these steps for the analyses below we omit using subjective judgment as the basis for estimating the population effect size. Sometimes researchers are tempted to use a subjective judgment as to whether the population effect is small, medium, or large based on Cohen's (1988) benchmarks. Unfortunately, using benchmarks of this sort as the basis for determine the smallest effect size of interest (SESOI) at the population level is problematic because it is subjective. Many researchers might be tempted to take a middle of the road approach and use a medium effect size. Yet a review of meta-analytic effect sizes (i.e., population estimates) by \citep{hemphill2003interpreting} indicated that 2/3 of the population effect sizes in psychology are lower than a medium effect. Consequently, taking a middle of the road approach and assuming a medium effect size is likely to result in low statistical power. Indeed, ``{[}r{]}elying on a benchmark is the weakest possible justification of a SESOI and should be avoided.'' \citep[p.~262,][]{lakens2018equivalence}
+As we review these steps for the analyses below we omit using subjective judgment as the basis for estimating the population effect size. Sometimes researchers are tempted to use a subjective judgment as to whether the population effect is small, medium, or large based on Cohen's (1988) benchmarks. Unfortunately, using benchmarks of this sort as the basis for determine the smallest effect size of interest (\textbf{SESOI}) at the population level is problematic because it is subjective. Many researchers might be tempted to take a middle of the road approach and use a medium effect size. Yet a review of meta-analytic effect sizes (i.e., population estimates) by \citep{hemphill2003interpreting} indicated that 2/3 of the population effect sizes in psychology are lower than a medium effect. Consequently, taking a middle of the road approach and assuming a medium effect size is likely to result in low statistical power. Indeed, ``{[}r{]}elying on a benchmark is the weakest possible justification of a SESOI and should be avoided.'' \citep[p.~262,][]{lakens2018equivalence}
 
 \begin{rmdcaution}
 \begin{rmdcaution}
