--- a/08-power_effect_size.Rmd
+++ b/08-power_effect_size.Rmd
@@ -363,7 +363,7 @@ n <- 50
 # do not modify this line
 pwr.t.test(power = .33,
            n = n, 
-           type = "one.sample",
+           type = "paired",
            alternative = alternative)
 ```
 
