--- a/docs/bookdown.tex
+++ b/docs/bookdown.tex
@@ -203,7 +203,7 @@
 
 \title{Welcome!}
 \author{David J. Stanley}
-\date{2020-10-22}
+\date{2020-10-24}
 
 \begin{document}
 \maketitle
@@ -737,11 +737,7 @@ So you should do the following EVERY time you run your script.
 This will clear potentially problematic previous stats, run the script commands, and display the output in the Console. Moving forward we will use this approach for running scripts. Once you have used Source wiht Echo once, you can just click the Source button and it will use Source with Echo automatically (without the need to use the pull down option for selecting Source with Echo).
 
 \begin{rmdcaution}
-\begin{rmdcaution}
-
 Using Restart R before you run a script, or R code in general, is a critical workflow tip.
-
-\end{rmdcaution}
 \end{rmdcaution}
 
 \hypertarget{trying-source-with-echo}{%
@@ -2638,8 +2634,8 @@ These effect size labels should be interpreted with caution. The magnitude of an
 \hypertarget{graphing}{%
 \chapter{Graphing}\label{graphing}}
 
-\hypertarget{required-1}{%
-\section{Required}\label{required-1}}
+\hypertarget{required}{%
+\section{Required}\label{required}}
 
 The data files below are used in this chapter. The files are available at: \url{https://github.com/dstanley4/psyc6060bookdown}
 
@@ -3822,8 +3818,8 @@ The print() command can be used to confirm that the population contains 100,000 
 ## # ... with 99,990 more rows
 \end{verbatim}
 
-\hypertarget{notation-1}{%
-\section{Notation}\label{notation-1}}
+\hypertarget{notation}{%
+\section{Notation}\label{notation}}
 
 In the formulas below, when we refer to the population, we use uppercase letters to indicate members (\(X\)) or the size (\(N\)). The population mean is indicated by the symbol \(\mu\). In contrast, when we refer to the sample, we use lowercase letters to indicate members (\(x\)) or the size (\(n\)). The sample mean is indicated by the symbol \(\bar{x}\). A single bar above a letter indicates a mean. If we calculate the average of several sample means we indicate this with the symbol \(\bar{\bar{x}}\). A double bar above a letter indicates a mean of means. Make sure you notice the similarities between subsequent population and sample formulas even though the notation often differs.
 
@@ -4581,8 +4577,8 @@ Now that you understand the logic for assessing bias, we present an old statisti
 ``A physicist, a chemist, and a statistician go hunting. The physicist shoots at a deer and misses by 2 meters to the left. The chemist shoots and misses by 2 meters to the right. The statistician immediately yells''We got it!"
 \end{quote}
 
-\hypertarget{key-points-1}{%
-\section{Key Points}\label{key-points-1}}
+\hypertarget{key-points}{%
+\section{Key Points}\label{key-points}}
 
 \begin{enumerate}
 \def\labelenumi{\arabic{enumi}.}
@@ -4603,8 +4599,8 @@ Now that you understand the logic for assessing bias, we present an old statisti
 \hypertarget{sampling-precision}{%
 \chapter{Sampling Precision}\label{sampling-precision}}
 
-\hypertarget{overview-2}{%
-\section{Overview}\label{overview-2}}
+\hypertarget{overview}{%
+\section{Overview}\label{overview}}
 
 In the previous chapter we focused on examining the extent to which we could estimate a population parameter from a statistic in an unbiased manner. That is, we focused on the fact that, due to sampling error, a sample estimate (i.e., a statistic) of a population parameter will likely be wrong. Sample statistics may overestimate, or underestimate, a population parameter - often substantially. Consequently, we learned to think about the accuracy of sample statistics. More specifically, we learned to think about accuracy not in terms of a single study, but rather in terms of whether sample statistics correctly estimate the population parameter on average over many studies (as illustrated in Figure \ref{fig:showbias2}). When the average of many sample statistics (e.g., sample means) equals the population parameter (e.g., population mean) there is no bias and the sample statistic can be considered accurate (on average).
 
@@ -5100,8 +5096,8 @@ As with the other statistics reviewed, for sample correlations (\(r\)) you can c
 \hypertarget{effect-sizes-from-publications}{%
 \chapter{Effect sizes from publications}\label{effect-sizes-from-publications}}
 
-\hypertarget{required-2}{%
-\section{Required}\label{required-2}}
+\hypertarget{required}{%
+\section{Required}\label{required}}
 
 The following CRAN packages must be installed:
 
@@ -5115,15 +5111,15 @@ cocor\tabularnewline
 \bottomrule
 \end{longtable}
 
-\hypertarget{objective-1}{%
-\section{Objective}\label{objective-1}}
+\hypertarget{objective}{%
+\section{Objective}\label{objective}}
 
 In this chapter we focus on obtaining effect size estimates (e.g., correlation or standardized mean difference) from published articles. Often studies do not report effect sizes (e.g., \(d\)-values) or if they do, they don't report the confidence interval for that effect. We will learn more about confidence intervals in a future chapter, but for now, think of a confidence interval for a study/sample effect (e.g., \(d\)-value) as providing a plausible range of values for the population parameter (e.g., \(\delta\)). Below we learn the R commands needed to obtain effect sizes with confidence intervals from published articles.
 
 The ability to obtain effect size estimate from articles will be come extraordinarily important later in the course. Specifically, when it is time to engage in sample size planning (e.g., for your thesis) you will need to obtain estimates of the effects you are interested in from past research. The commands in this chapter will help you to do so.
 
-\hypertarget{estimating-delta-1}{%
-\section{\texorpdfstring{Estimating \(\delta\)}{Estimating \textbackslash delta}}\label{estimating-delta-1}}
+\hypertarget{estimating-delta}{%
+\section{\texorpdfstring{Estimating \(\delta\)}{Estimating \textbackslash delta}}\label{estimating-delta}}
 
 \hypertarget{independent-groups}{%
 \subsection{Independent Groups}\label{independent-groups}}
@@ -5551,8 +5547,8 @@ We can use the N and \(t\)-value to calculate the \(d\)-value and CI using the c
 
 In this repeated measures design the population effect (\(\delta\)) is unknown but our sample estimate of weight loss is \(d\) = 0.97, 95\% CI {[}0.60, 1.34{]}. This \(d\)-value will differ from the population effect (\(\delta\)) due to sampling error. The confidence interval indicates that a plausible range for \(\delta\) is 0.60 to 1.34.
 
-\hypertarget{estimating-rho-1}{%
-\section{\texorpdfstring{Estimating \(\rho\)}{Estimating \textbackslash rho}}\label{estimating-rho-1}}
+\hypertarget{estimating-rho}{%
+\section{\texorpdfstring{Estimating \(\rho\)}{Estimating \textbackslash rho}}\label{estimating-rho}}
 
 \hypertarget{a-single-correlation}{%
 \subsection{A single correlation}\label{a-single-correlation}}
@@ -5627,8 +5623,8 @@ From this output you see that in Study 1 \(r\) = .32 and in Study 2 \(r\) = .51.
 \hypertarget{sample-size-analysis-for-nhst}{%
 \chapter{Sample size analysis for NHST}\label{sample-size-analysis-for-nhst}}
 
-\hypertarget{required-3}{%
-\section{Required}\label{required-3}}
+\hypertarget{required}{%
+\section{Required}\label{required}}
 
 The following CRAN packages must be installed:
 
@@ -5642,8 +5638,8 @@ pwr\tabularnewline
 \bottomrule
 \end{longtable}
 
-\hypertarget{overview-3}{%
-\section{Overview}\label{overview-3}}
+\hypertarget{overview}{%
+\section{Overview}\label{overview}}
 
 In this chapter we focus on statistical power -- which is the probability of finding an effect if it exists. For example, if the power for your study is .90 that means you have a 90\% chance of finding an effect if it exists. On the other hand, if your statistical power is below .50 that means you have less than a 50\% chance of finding an effect if it exists. If your power is .50 you might well question whether it is even worth conducting your study - because the odds of finding an effect (if there is one) are so incredibly low. Low statistical power means you have a \emph{\textbf{low} chance of concluding there is an effect} when an effect \textbf{is} present.
 
@@ -5684,11 +5680,7 @@ Below we present the process for conducing a sample size analysis for the indepe
 As we review these steps for the analyses below we omit using subjective judgment as the basis for estimating the population effect size. Sometimes researchers are tempted to use a subjective judgment as to whether the population effect is small, medium, or large based on Cohen's (1988) benchmarks. Unfortunately, using benchmarks of this sort as the basis for determine the smallest effect size of interest (\textbf{SESOI}) at the population level is problematic because it is subjective. Many researchers might be tempted to take a middle of the road approach and use a medium effect size. Yet a review of meta-analytic effect sizes (i.e., population estimates) by \citep{hemphill2003interpreting} indicated that 2/3 of the population effect sizes in psychology are lower than a medium effect. Consequently, taking a middle of the road approach and assuming a medium effect size is likely to result in low statistical power. Indeed, ``{[}r{]}elying on a benchmark is the weakest possible justification of a SESOI and should be avoided.'' \citep[p.~262,][]{lakens2018equivalence}
 
 \begin{rmdcaution}
-\begin{rmdcaution}
-
 \textbf{Using a sample size of previous study}. One approach to sample size analysis is simply to use the sample size from a previous study conducted in that research area. This is the worst possible strategy for choosing a sample size. Richard Morey and Daniel Lakens \href{https://www.google.com/url?sa=t\&rct=j\&q=\&esrc=s\&source=web\&cd=\&ved=2ahUKEwj3wvikhsPsAhVxk-AKHe5xCsYQFjAAegQIBRAC\&url=https\%3A\%2F\%2Fraw.githubusercontent.com\%2Fricharddmorey\%2Fpsychology_resolution\%2Fmaster\%2Fpaper\%2Fresponse.pdf\&usg=AOvVaw2-uqEGCGlGvLVlazweKRq2}{discuss} how most study results in psychology are statistically unfalsifiable because the sample sizes (and corresponding power) are so low. Consequently, using a the sample size for your study based on past research is not advised. Doing so will most likely to result in a sample size that is so small any resulting findings will be untrustworthy and unfalsifiable. Conduct a proper sample size analysis.
-
-\end{rmdcaution}
 \end{rmdcaution}
 
 \hypertarget{independent-groups-t-test}{%
@@ -6121,20 +6113,22 @@ We begin by assuming the previous study is a small telescope and has low statist
 \CommentTok{# do not modify this line}
 \KeywordTok{pwr.t.test}\NormalTok{(}\DataTypeTok{power =} \FloatTok{.33}\NormalTok{,}
            \DataTypeTok{n =}\NormalTok{ n, }
-           \DataTypeTok{type =} \StringTok{"one.sample"}\NormalTok{,}
+           \DataTypeTok{type =} \StringTok{"paired"}\NormalTok{,}
            \DataTypeTok{alternative =}\NormalTok{ alternative)}
 \end{Highlighting}
 \end{Shaded}
 
 \begin{verbatim}
 ## 
-##      One-sample t test power calculation 
+##      Paired t test power calculation 
 ## 
 ##               n = 50
 ##               d = 0.1728
 ##       sig.level = 0.05
 ##           power = 0.33
 ##     alternative = greater
+## 
+## NOTE: n is number of *pairs*
 \end{verbatim}
 
 The indicates when \(\delta\) = 0.17 the previous study (with 50 participants) would have statistical power of .33. Therefore, we would use \(\delta\) = 0.17 as the population effect size in next stage of the power/sample size analysis: Determining Sample Size.
